@@ -82,7 +82,6 @@ inet_aton(cp, ia)
 }
 #endif
 
-#if 0
 /*
  * Get our IP address and put it in our_addr
  */
@@ -100,7 +99,6 @@ getouraddr()
 	
 	our_addr = *(struct in_addr *)he->h_addr;
 }
-#endif
 
 #if SIZEOF_CHAR_P == 8
 
